# byte-strings-rs

./: Cargo.toml  README.md  change_version.sh  rust-toolchain.toml
.github/workflows/: CI.yml  future-proof.yml
byte-strings-proc-macro/: Cargo.toml
byte-strings-proc-macro/src/: as_bytes.rs  c_str.rs  concat_bytes.rs  identity_non_null.rs  lib.rs
examples/: readme_into.rs
src/: compile_fail_tests.md  const.rs  lib.rs
src/proc_macros/: Cargo.toml  input_bytes.rs  mod.rs
tests/: consts.rs  main.rs  readme_intro.rs
