[package]
name = "byte-strings"
version = "0.1.3"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "Rust byte strings manipulation, for a better and safer C FFI"

documentation = "https://docs.rs/byte_strings/"
homepage = "https://github.com/danielhenrymantilla/byte-strings-rs"
repository = "https://github.com/danielhenrymantilla/byte-strings-rs"

license = "MIT"

readme = "README.md"


keywords = ["ffi", "c", "string", "char", "c_str"]

categories = ["api-bindings", "rust-patterns", ]

[dependencies]
byte-strings-proc-macro = "0.1.1"
cfg-if = "0.1.6"

[features]
default = []

nightly = []
proc-macro-hygiene = ["byte-strings-proc-macro/proc-macro-hygiene"]

[package.metadata.docs.rs]
features = [ "nightly" ]
