# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[package]
name = "byte-strings"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.2.2"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/byte-strings-rs"
documentation = "https://docs.rs/byte-strings"
readme = "README.md"

description = "Rust byte strings manipulation, for a better and safer C FFI"
keywords = ["ffi", "c", "string", "char", "c_str"]

categories = ["api-bindings", "rust-patterns"]

[features]
better-docs = []  # allowed to break MSRV
ui-tests = ["better-docs", "const-friendly"]
const-friendly = []  # allowed to break MSRV

[dependencies]

[dependencies.byte-strings-proc_macros]
path = "src/proc_macros"
version = "0.2.2"  # Keep in sync

[dev-dependencies]

[workspace]
members = [
    "src/proc_macros",
]

[package.metadata.docs.rs]
all-features = true
