[lib]
proc-macro = true

[package]
name = "byte-strings-proc-macro"
version = "0.1.1"
authors = ["Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>"]
edition = "2018"

description = "https://crates.io/crates/byte-strings backing proc-macros"

documentation = "https://docs.rs/byte_strings/"
homepage = "https://github.com/danielhenrymantilla/byte-strings-rs"
repository = "https://github.com/danielhenrymantilla/byte-strings-rs"

license = "MIT"

[dependencies]
cfg-if = "0.1.6"
quote = "0.6.11"
syn = { version = "0.15" }

[features]
default = []
proc-macro-hygiene = []
