# Templated by `cargo-generate` using https://github.com/danielhenrymantilla/proc-macro-template
[lib]
proc-macro = true
path = "mod.rs"

[package]
name = "byte-strings-proc_macros"
authors = [
    "Daniel Henry-Mantilla <daniel.henry.mantilla@gmail.com>",
]
version = "0.2.0"  # Keep in sync
edition = "2018"

license = "Zlib OR MIT OR Apache-2.0"
repository = "https://github.com/danielhenrymantilla/byte-strings-rs"
documentation = "https://docs.rs/byte-strings"

description = "Internal: proc-macro backend of ::byte_strings."

[dependencies]
proc-macro2.version = "1.0.0"
quote.version = "1.0.0"
syn.version = "1.0.7"  # Access to `receiver()`.
syn.features = [
    "full",
]
